Add AttentionGate to unet

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,14 +2,274 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import h5py\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import torch\n",
+    "from fastmri.models import Unet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Unet(in_chans=1,\n",
+    "             out_chans=1,\n",
+    "             chans=256,\n",
+    "             num_pool_layers=4,\n",
+    "             drop_prob=0.0)\n",
+    "model.load_state_dict(torch.load(\"./models/pretrained/knee_sc_leaderboard_state_dict.pt\", map_location='mps'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unet(\n",
+       "  (down_sample_layers): ModuleList(\n",
+       "    (0): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(1, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(256, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(256, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(512, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(512, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (2): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(1024, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(1024, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (3): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(1024, 2048, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(2048, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(2048, 2048, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(2048, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (conv): ConvBlock(\n",
+       "    (layers): Sequential(\n",
+       "      (0): Conv2d(2048, 4096, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): InstanceNorm2d(4096, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "      (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "      (3): Dropout2d(p=0.0, inplace=False)\n",
+       "      (4): Conv2d(4096, 4096, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (5): InstanceNorm2d(4096, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "      (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "      (7): Dropout2d(p=0.0, inplace=False)\n",
+       "    )\n",
+       "  )\n",
+       "  (up_conv): ModuleList(\n",
+       "    (0): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(4096, 2048, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(2048, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(2048, 2048, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(2048, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(2048, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(1024, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(1024, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (2): ConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (1): InstanceNorm2d(512, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (3): Dropout2d(p=0.0, inplace=False)\n",
+       "        (4): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "        (5): InstanceNorm2d(512, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "        (7): Dropout2d(p=0.0, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (3): Sequential(\n",
+       "      (0): ConvBlock(\n",
+       "        (layers): Sequential(\n",
+       "          (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          (1): InstanceNorm2d(256, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "          (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "          (3): Dropout2d(p=0.0, inplace=False)\n",
+       "          (4): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "          (5): InstanceNorm2d(256, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "          (6): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "          (7): Dropout2d(p=0.0, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "      (1): Conv2d(256, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    )\n",
+       "  )\n",
+       "  (up_transpose_conv): ModuleList(\n",
+       "    (0): TransposeConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): ConvTranspose2d(4096, 2048, kernel_size=(2, 2), stride=(2, 2), bias=False)\n",
+       "        (1): InstanceNorm2d(2048, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): TransposeConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): ConvTranspose2d(2048, 1024, kernel_size=(2, 2), stride=(2, 2), bias=False)\n",
+       "        (1): InstanceNorm2d(1024, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (2): TransposeConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): ConvTranspose2d(1024, 512, kernel_size=(2, 2), stride=(2, 2), bias=False)\n",
+       "        (1): InstanceNorm2d(512, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (3): TransposeConvBlock(\n",
+       "      (layers): Sequential(\n",
+       "        (0): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2), bias=False)\n",
+       "        (1): InstanceNorm2d(256, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
+       "        (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "======================================================================\n",
+       "Layer (type:depth-idx)                        Param #\n",
+       "======================================================================\n",
+       "Unet                                          --\n",
+       "├─ModuleList: 1-1                             --\n",
+       "│    └─ConvBlock: 2-1                         --\n",
+       "│    │    └─Sequential: 3-1                   592,128\n",
+       "│    └─ConvBlock: 2-2                         --\n",
+       "│    │    └─Sequential: 3-2                   3,538,944\n",
+       "│    └─ConvBlock: 2-3                         --\n",
+       "│    │    └─Sequential: 3-3                   14,155,776\n",
+       "│    └─ConvBlock: 2-4                         --\n",
+       "│    │    └─Sequential: 3-4                   56,623,104\n",
+       "├─ConvBlock: 1-2                              --\n",
+       "│    └─Sequential: 2-5                        --\n",
+       "│    │    └─Conv2d: 3-5                       75,497,472\n",
+       "│    │    └─InstanceNorm2d: 3-6               --\n",
+       "│    │    └─LeakyReLU: 3-7                    --\n",
+       "│    │    └─Dropout2d: 3-8                    --\n",
+       "│    │    └─Conv2d: 3-9                       150,994,944\n",
+       "│    │    └─InstanceNorm2d: 3-10              --\n",
+       "│    │    └─LeakyReLU: 3-11                   --\n",
+       "│    │    └─Dropout2d: 3-12                   --\n",
+       "├─ModuleList: 1-3                             --\n",
+       "│    └─ConvBlock: 2-6                         --\n",
+       "│    │    └─Sequential: 3-13                  113,246,208\n",
+       "│    └─ConvBlock: 2-7                         --\n",
+       "│    │    └─Sequential: 3-14                  28,311,552\n",
+       "│    └─ConvBlock: 2-8                         --\n",
+       "│    │    └─Sequential: 3-15                  7,077,888\n",
+       "│    └─Sequential: 2-9                        --\n",
+       "│    │    └─ConvBlock: 3-16                   1,769,472\n",
+       "│    │    └─Conv2d: 3-17                      257\n",
+       "├─ModuleList: 1-4                             --\n",
+       "│    └─TransposeConvBlock: 2-10               --\n",
+       "│    │    └─Sequential: 3-18                  33,554,432\n",
+       "│    └─TransposeConvBlock: 2-11               --\n",
+       "│    │    └─Sequential: 3-19                  8,388,608\n",
+       "│    └─TransposeConvBlock: 2-12               --\n",
+       "│    │    └─Sequential: 3-20                  2,097,152\n",
+       "│    └─TransposeConvBlock: 2-13               --\n",
+       "│    │    └─Sequential: 3-21                  524,288\n",
+       "======================================================================\n",
+       "Total params: 496,372,225\n",
+       "Trainable params: 496,372,225\n",
+       "Non-trainable params: 0\n",
+       "======================================================================"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "summary(model)#, input_size=(320, 320))"
    ]
   },
   {
@@ -872,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
