--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
-    "version_name = \"unet_attn_roi\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "version_name = \"unet\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
     "\n",
     "only_annotated = False\n",
@@ -94,7 +94,7 @@
     "    challenge=\"singlecoil\",\n",
     "    num_gpus=1,\n",
     "    backend=\"mps\",\n",
-    "    batch_size=16,\n",
+    "    batch_size=8,\n",
     "    data_path=fetch_dir(\"knee_path\", path_config),\n",
     "    default_root_dir=fetch_dir(\"log_path\", path_config) / \"unet\" / version_name,\n",
     "    mode=\"train\",  # \"train\" or \"test\"\n",
@@ -104,9 +104,10 @@
     "    # model parameters\n",
     "    in_chans=1,\n",
     "    out_chans=1,\n",
-    "    chans=32,\n",
-    "    # chans=256,\n",
-    "    num_pool_layers=6,\n",
+    "    #chans=32,\n",
+    "    chans=64,\n",
+    "    #num_pool_layers=4,\n",
+    "    num_pool_layers=3,\n",
     "    drop_prob=0.0,\n",
     "    lr=0.001,\n",
     "    lr_step_size=40,\n",
@@ -114,7 +115,7 @@
     "    weight_decay=0.0,\n",
     "    max_epochs=10,\n",
     "    metric=metric,\n",
-    "    roi_weight=0.25,\n",
+    "    roi_weight=0.5,\n",
     "    attn_layer=attn_layer,\n",
     "    use_roi=use_roi,\n",
     "    only_annotated=only_annotated\n",
@@ -183,7 +184,8 @@
     "    default_root_dir=configs['default_root_dir'],\n",
     "    accelerator=configs['backend'],\n",
     "    callbacks=callbacks,\n",
-    "    logger=tensorboard\n",
+    "    logger=tensorboard,\n",
+    "    profiler='simple'\n",
     ")\n",
     "\n",
     "#if args.resume_from_checkpoint is None:\n",
@@ -211,137 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = data_module.val_dataloader()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2028"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=0, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': PosixPath('data/singlecoil_val/file1000000.h5'), 'slice': 0, 'study_level': '', 'x': -1, 'y': -1, 'width': -1, 'height': -1, 'label': ''}]})"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.dataset.raw_samples[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=10, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 10, 'study_level': 'No', 'x': 87, 'y': 160, 'width': 56, 'height': 108, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=11, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 11, 'study_level': 'No', 'x': 79, 'y': 158, 'width': 57, 'height': 109, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=12, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 12, 'study_level': 'No', 'x': 76, 'y': 148, 'width': 57, 'height': 115, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=13, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 13, 'study_level': 'No', 'x': 67, 'y': 144, 'width': 61, 'height': 111, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=13, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 13, 'study_level': 'No', 'x': 67, 'y': 144, 'width': 61, 'height': 111, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=14, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 14, 'study_level': 'No', 'x': 76, 'y': 143, 'width': 43, 'height': 97, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=14, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 14, 'study_level': 'No', 'x': 76, 'y': 143, 'width': 43, 'height': 97, 'label': 'Joint Effusion '}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=15, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': 'file1000000', 'slice': 15, 'study_level': 'No', 'x': 141, 'y': 141, 'width': 16, 'height': 12, 'label': 'Cartilage - Partial Thickness loss/defect'}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=16, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': PosixPath('data/singlecoil_val/file1000000.h5'), 'slice': 16, 'study_level': '', 'x': -1, 'y': -1, 'width': -1, 'height': -1, 'label': ''}]}),\n",
-       " FastMRIRawDataSample(fname=PosixPath('data/singlecoil_val/file1000000.h5'), slice_ind=17, metadata={'padding_left': 18, 'padding_right': 350, 'encoding_size': (640, 368, 1), 'recon_size': (320, 320, 1), 'acquisition': 'CORPDFS_FBK', 'max': np.float64(0.00017707173297391214), 'norm': np.float64(0.058663394182755665), 'patient_id': 'b2a82c7521fe2d4aebb627bbaae92a1916bf06e75cb374fc4187b0909e5c0e36', 'annotations': [{'fname': PosixPath('data/singlecoil_val/file1000000.h5'), 'slice': 17, 'study_level': '', 'x': -1, 'y': -1, 'width': -1, 'height': -1, 'label': ''}]})]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.dataset.raw_samples[10:20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'fname': ['', 'file1000000', 'file1000000', 'file1000000'],\n",
-       "  'slice': tensor([-1,  9, 10, 11]),\n",
-       "  'study_level': ['', 'No', 'No', 'No'],\n",
-       "  'x': tensor([-1, 99, 87, 79]),\n",
-       "  'y': tensor([ -1, 175, 160, 158]),\n",
-       "  'width': tensor([-1, 57, 56, 57]),\n",
-       "  'height': tensor([ -1,  81, 108, 109]),\n",
-       "  'label': ['', 'Joint Effusion ', 'Joint Effusion ', 'Joint Effusion ']}]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.13/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_attn_roi_l1_roi_attn/checkpoints exists and is not empty.\n",
+      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.13/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_l1/checkpoints exists and is not empty.\n",
       "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
       "\n",
       "  | Name             | Type                 | Params\n",
@@ -352,18 +231,18 @@
       "3 | ValLoss          | DistributedMetricSum | 0     \n",
       "4 | TotExamples      | DistributedMetricSum | 0     \n",
       "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
-      "6 | unet             | Unet                 | 125 M \n",
+      "6 | unet             | Unet                 | 124 M \n",
       "----------------------------------------------------------\n",
-      "125 M     Trainable params\n",
+      "124 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "125 M     Total params\n",
-      "503.237   Total estimated model params size (MB)\n"
+      "124 M     Total params\n",
+      "496.375   Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fca34dd52c094101aedd436620490b39",
+       "model_id": "fdf41ef82a204eb59e28ce468aa44fb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1c7579e20844366a746f90f91071efb",
+       "model_id": "3857b43f84d143dfba3f762d7a70e198",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,24 +277,13 @@
     }
    ],
    "source": [
-    "\n",
-    "# Add PyTorch profiler to the .fit() call\n",
-    "from torch.profiler import profile, record_function, ProfilerActivity\n",
-    "\n",
-    "# Create profiler\n",
-    "profiler = profile(\n",
-    "    activities=[ProfilerActivity.CPU],\n",
-    "    schedule=torch.profiler.schedule(wait=1, warmup=1, active=3, repeat=2),\n",
-    "    on_trace_ready=torch.profiler.tensorboard_trace_handler(str(configs['default_root_dir'] / \"profiler\")),\n",
-    "    record_shapes=True,\n",
-    "    profile_memory=True,\n",
-    "    with_stack=True\n",
-    ")\n",
-    "\n",
-    "# Fit with profiler\n",
-    "with profiler:\n",
-    "    trainer.fit(model, datamodule=data_module)\n"
+    "trainer.fit(model, datamodule=data_module)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -438,77 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "====================================================================================================\n",
-       "Layer (type:depth-idx)                             Output Shape              Param #\n",
-       "====================================================================================================\n",
-       "UnetModule                                         [1, 320, 320]             --\n",
-       "├─Unet: 1-1                                        [1, 1, 320, 320]          32,866\n",
-       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-1                         [1, 32, 320, 320]         9,504\n",
-       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
-       "│    │    └─CBAM: 3-2                              [1, 32, 320, 320]         226\n",
-       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-3                         [1, 64, 160, 160]         55,296\n",
-       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
-       "│    │    └─CBAM: 3-4                              [1, 64, 160, 160]         610\n",
-       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-5                         [1, 128, 80, 80]          221,184\n",
-       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
-       "│    │    └─CBAM: 3-6                              [1, 128, 80, 80]          2,146\n",
-       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-7                         [1, 256, 40, 40]          884,736\n",
-       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
-       "│    │    └─CBAM: 3-8                              [1, 256, 40, 40]          8,290\n",
-       "│    └─ConvBlock: 2-9                              [1, 512, 20, 20]          --\n",
-       "│    │    └─Sequential: 3-9                        [1, 512, 20, 20]          3,538,944\n",
-       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
-       "│    │    └─TransposeConvBlock: 3-10               [1, 256, 40, 40]          524,288\n",
-       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
-       "│    │    └─CBAM: 3-11                             [1, 512, 40, 40]          32,866\n",
-       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-12                        [1, 256, 40, 40]          1,769,472\n",
-       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
-       "│    │    └─TransposeConvBlock: 3-13               [1, 128, 80, 80]          131,072\n",
-       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
-       "│    │    └─CBAM: 3-14                             [1, 256, 80, 80]          8,290\n",
-       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-15                        [1, 128, 80, 80]          442,368\n",
-       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
-       "│    │    └─TransposeConvBlock: 3-16               [1, 64, 160, 160]         32,768\n",
-       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
-       "│    │    └─CBAM: 3-17                             [1, 128, 160, 160]        2,146\n",
-       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-18                        [1, 64, 160, 160]         110,592\n",
-       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
-       "│    │    └─TransposeConvBlock: 3-19               [1, 32, 320, 320]         8,192\n",
-       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
-       "│    │    └─CBAM: 3-20                             [1, 64, 320, 320]         610\n",
-       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
-       "│    │    └─Sequential: 3-21                       [1, 1, 320, 320]          27,681\n",
-       "====================================================================================================\n",
-       "Total params: 7,844,147\n",
-       "Trainable params: 7,844,147\n",
-       "Non-trainable params: 0\n",
-       "Total mult-adds (G): 21.35\n",
-       "====================================================================================================\n",
-       "Input size (MB): 0.41\n",
-       "Forward/backward pass size (MB): 252.06\n",
-       "Params size (MB): 31.25\n",
-       "Estimated Total Size (MB): 283.71\n",
-       "===================================================================================================="
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torchinfo import summary\n",
     "summary(model, input_size=(1, 320, 320))"
