Make attentionGates switchable on unet

--- a/model.ipynb
+++ b/model.ipynb
@@ -50,25 +50,24 @@
     "version_name = \"unet\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
     "\n",
+    "# Default parameter values\n",
     "only_annotated = False\n",
+    "attn_layer = False\n",
+    "metric = \"l1\"\n",
+    "use_roi = False\n",
+    "use_attention_gates = False  # New parameter\n",
+    "\n",
+    "# Configure model variants\n",
     "if version_name == \"unet\":\n",
-    "    attn_layer = False\n",
-    "    metric = \"l1\"\n",
-    "    use_roi = False\n",
+    "    pass  # Using defaults above\n",
     "elif version_name == \"unet_roi\":\n",
-    "    attn_layer = False\n",
-    "    metric = \"l1\"\n",
     "    use_roi = True\n",
     "elif version_name == \"unet_attn\":\n",
     "    attn_layer = True\n",
-    "    metric = \"l1\"\n",
-    "    use_roi = False\n",
     "elif version_name == \"unet_attn_roi\":\n",
     "    attn_layer = True\n",
-    "    metric = \"l1\"\n",
     "    use_roi = True\n",
     "elif version_name == \"unet_ssim\":\n",
-    "    attn_layer = False\n",
     "    metric = \"ssim\"\n",
     "    use_roi = True\n",
     "elif version_name == \"unet_attn_ssim\":\n",
@@ -76,18 +75,29 @@
     "    metric = \"ssim\"\n",
     "    use_roi = True\n",
     "elif version_name == \"unet_annot_only\":\n",
-    "    attn_layer = False\n",
-    "    metric = \"l1\"\n",
-    "    use_roi = False\n",
     "    only_annotated = True\n",
     "elif version_name == \"unet_roi_annot_only\":\n",
-    "    attn_layer = False\n",
-    "    metric = \"l1\"\n",
     "    use_roi = True\n",
     "    only_annotated = True\n",
+    "# New configurations for attention gates\n",
+    "elif version_name == \"unet_attention_gates\":\n",
+    "    use_attention_gates = True\n",
+    "    use_roi = True\n",
+    "elif version_name == \"unet_attention_gates_attn\":\n",
+    "    use_attention_gates = True\n",
+    "    attn_layer = True\n",
+    "    use_roi = True\n",
+    "elif version_name == \"unet_attention_gates_ssim\":\n",
+    "    use_attention_gates = True\n",
+    "    metric = \"ssim\"\n",
+    "    use_roi = True\n",
     "\n",
-    "\n",
-    "version_name = f\"{version_name}_{metric}\" + (\"_roi\" if use_roi else \"\") + (\"_attn\" if attn_layer else \"\") + (\"_annot\" if only_annotated else \"\")\n",
+    "# Build descriptive version name\n",
+    "version_name = f\"{version_name}_{metric}\" + \\\n",
+    "              (\"_roi\" if use_roi else \"\") + \\\n",
+    "              (\"_attn\" if attn_layer else \"\") + \\\n",
+    "              (\"_agate\" if use_attention_gates else \"\") + \\\n",
+    "              (\"_annot\" if only_annotated else \"\")\n",
     "\n",
     "\n",
     "configs = dict(\n",
@@ -118,7 +128,8 @@
     "    roi_weight=0.5,\n",
     "    attn_layer=attn_layer,\n",
     "    use_roi=use_roi,\n",
-    "    only_annotated=only_annotated\n",
+    "    only_annotated=only_annotated,\n",
+    "    use_attention_gates=use_attention_gates,\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
@@ -161,6 +172,7 @@
     "    roi_weight=configs['roi_weight'],\n",
     "    attn_layer=configs['attn_layer'],\n",
     "    use_roi=configs['use_roi'],\n",
+    "    use_attention_gates=configs['use_attention_gates'],\n",
     ")\n",
     "\n",
     "callbacks = [\n",
